# slak

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/: check_version.py
.github/workflows/: ci.yml  release.yml
nix/emoji-data-python/: package.nix
packaging/: build-deb.sh
scripts/: bump_version.py
slak/: __init__.py  __main__.py  app.py  blockkit.py  color.py  debuglog.py  dev.py  fileicons.py  finder.py  fonts.py  help.py  images.py  links.py  markup.py  nav.py  render.py  sections.py  services.py  text.py  themes.py  version.py  workspace.py
slak/cache/: __init__.py
slak/config/: __init__.py
slak/emoji/: __init__.py
slak/mcp/: __init__.py  adapter.py
slak/notify/: __init__.py
slak/slack/: __init__.py  http.py  tokens.py
slak/ui/: commands.py  widgets.py
slak/ui/styles/: app.tcss
tests/: test_app.py  test_backfill.py  test_backfill_ui.py  test_blockkit.py  test_cache.py  test_cli.py  test_color.py  test_config.py  test_config_persist_ui.py  test_config_persistence.py  test_edit_delete.py  test_edit_delete_ui.py  test_emoji.py  test_fake_client.py  test_finder.py  test_finder_ui.py  test_fonts.py  test_help.py  test_help_ui.py  test_history_ui.py  test_http_client.py  test_images.py  test_links.py  test_mcp.py  test_mcp_ui.py  test_media_images.py  test_native_sections.py  test_nav.py  test_new_message.py  test_new_message_ui.py  test_notify.py  test_open_links_ui.py  test_render.py  test_sections.py  test_sections_ui.py  test_services.py  test_sidebar_ui.py  test_stars.py  test_text.py  test_theme_ui.py  (+10 more)
